--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,25 +1,3 @@
-#validFromRegion {
-    position:fixed;
-    top:8%;
-    right:4%;
-    width:200px;
-    height:200px;
-}
-
-#validUntilRegion {
-    position:fixed;
-    top:45%;
-    right:4%;
-    width:200px;
-    height:200px;
-}
-
-
-.flatpickr-calendar {
-  transform: scale(0.8);
-  transform-origin: top left;
-}
-
 .fixed-btn{
     height: 50px;
     width: 105px;
@@ -29,17 +7,7 @@
     justify-content: center;
 }
 
-.search-btn{
-    height: 70px;
-    width: 120px;
-    font-size: 20px;
-    border-width: 2px;
-}
-
-.btn-search:active {
-    transform: scale(0.97);
-}
-
+/* ----------- colours ----------------- */
 .blue{
     background-color: #044192;
 }
@@ -65,18 +33,58 @@
     color: black;
     font-weight: 500;
 }
+/* -------------for the user and car images -----------*/
+#user_photo {
+    max-width: 250px;
+    max-height: 250px;
+}
 
+#car_photo {
+    max-width: 250px;
+    max-height: 250px;
+}
 
+/* ------------ for the search/submit buttons --------- */
+.search-btn{
+    height: 70px;
+    width: 120px;
+    font-size: 20px;
+    border-width: 2px;
+}
 
+.btn-search:active {
+    transform: scale(0.97);
+}
 
+/* -------------for the date drop downs ------------*/
+#validFromRegion {
+    position:fixed;
+    top:8%;
+    right:4%;
+    width:200px;
+    height:200px;
+}
 
-/* for filter buttons */
+#validUntilRegion {
+    position:fixed;
+    top:45%;
+    right:4%;
+    width:200px;
+    height:200px;
+}
+
+.flatpickr-calendar {
+  transform: scale(0.8);
+  transform-origin: top left;
+}
+
+/* ------------- for filter buttons -----------------*/
 .btn-filter {
   display: inline-flex;
   align-items: center;
   justify-content: center;
 
-  padding: 0.375rem 0.75rem;
+  padding: 0.3rem 0.7rem;
   font-size: 1rem;
   font-weight: 500;
 
@@ -115,40 +123,7 @@
     background-color: #e9bc07;
 }
 
-
-.btn-date {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-
-  padding: 0.3rem 0.7rem;
-  font-size: 1rem;
-  font-weight: 500;
-
-  border-radius: 0.375rem;
-  border: 2px solid #B37800;
-  background-color: transparent;
-  color: black;
-
-  cursor: pointer;
-  user-select: none;
-
-  transition:
-    background-color 0.15s ease,
-    color 0.15s ease,
-    border-color 0.15s ease,
-    transform 0.05s ease;
-}
-
-.btn-date:active {
-    transform: scale(0.97);
-}
-
-.btn-date:hover {
-    background-color: gold;
-}
-
-
+/*----------------resetting filters -----------*/
 #reset_photo1 {
     width: 90%;
     height: auto;
@@ -186,7 +161,7 @@
   transform: scale(0.97);
 }
 
-
+/* -----------permit filter button ------------*/
 .btn-permit {
   display: inline-flex;
   align-items: center;
@@ -250,12 +225,7 @@
     transform: scale(0.97);
 }
 
-
-
-
-
-
-
+/*----------results table hovering -----------*/
 tr.results-row:hover > td {
     background-color: #c3cfe1 !important;
 }
@@ -268,6 +238,7 @@ tr.selected-row:hover > td {
     background-color:  #508bda !important;
 }
 
+/*----------top corner menu button ------------*/
 #menu_btn {
   display: inline-flex;
   align-items: center;
@@ -306,3 +277,19 @@ tr.selected-row:hover > td {
     width: auto;
 }
 
+/*------------------- for the add_records.html file -------------------- */
+#validFromRegionAdd {
+    position:fixed;
+    top:8%;
+    right:4%;
+    width:200px;
+    height:200px;
+}
+
+#validUntilRegionAdd {
+    position:fixed;
+    top:45%;
+    right:4%;
+    width:200px;
+    height:200px;
+}
