--- a/templates/index.html
+++ b/templates/index.html
@@ -324,7 +324,7 @@ function insert_table_rows(data) { /* This updates the table using js so no relo
     if (data.length === 0) {
         let row = tbody.insertRow()
         let cell = row.insertCell() // creates a single cell and extends it for the whole row to display no data available
-        cell.colSpan = "9"
+        cell.colSpan = "11"
         cell.textContent = 'No data available'
         old_data = [1]
     } else {
@@ -341,6 +341,8 @@ function insert_table_rows(data) { /* This updates the table using js so no relo
             row.insertCell().textContent = data[i].last_name
             row.insertCell().textContent = data[i].age
             row.insertCell().textContent = data[i].number_plate
+            row.insertCell().textContent = data[i].make
+            row.insertCell().textContent = data[i].model
             row.insertCell().textContent = data[i].colour
             row.insertCell().textContent = data[i].permit
             row.insertCell().textContent = data[i].usertype
